--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <h1>Innovation<br> On<br> Demand</h1>
         <button>Get Started</button>
       </div>
-      <img src="img/header-img.png" alt="Image of a code snippet.">
+      <div class="cta-img-container">
+        <img src="img/header-img.png" alt="Image of a code snippet.">
+      </div>
     </section>
 
     <section class="main-content">
